correct name and remove scrollbars

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,6 @@
+* {
+  scrollbar-width: none;
+}
 h1, p {
   margin: 0;
 }
